--- a/cruddemo/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/cruddemo/src/main/resources/application.properties
@@ -3,3 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/stidb
 spring.datasource.username=sti
 spring.datasource.password=sti
+
+##spring data rest properties
+
+spring.data.rest.base-path=/magic-api
