--- a/cruddemo/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/cruddemo/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=sti
 ##spring data rest properties
 
 spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=20
